--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -1,4 +1,4 @@
-t \documentclass[letterpaper, 11pt]{article}
+\documentclass[letterpaper, 11pt]{article}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{float}
@@ -48,6 +48,7 @@ t \documentclass[letterpaper, 11pt]{article}
 
 
 \section{BLDC Motor Model}
+\subsection{ESC and non-linear input compensation}
 \subsection{Static Model}
 \subsection{Dynamic Model (without Propeller)}
 %===============================================================================
@@ -81,6 +82,7 @@ t \documentclass[letterpaper, 11pt]{article}
 
 
 \section{Conclusion: Model and Model Parameters}
+\subsection{Parametric Form}
 %===============================================================================
 \newpage
 
