--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -14,6 +14,11 @@
 \usepackage{pdfpages}
 \usepackage{multicol}
 \usepackage{leftindex}
+\usepackage{mathtools}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=false,
+    }
 
 % Listings
 \usepackage{listings}
@@ -46,9 +51,9 @@
 %===============================================================================
 \newpage
 \section{BLDC Motor Model}
-\subsection{ESC and non-linear input compensation}
+\input{secs/ESC_input.tex}
 \input{./secs/bldc_static.tex}
-\subsection{Dynamic Model (without Propeller)}
+\input{./secs/BLDC_model.tex}
 %===============================================================================
 \newpage
 
