need to rewrite parametric model .

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -49,51 +49,32 @@
 \section{Aerodynamic Model}
 \input{secs/aero.tex}
 %===============================================================================
-\newpage
 \section{BLDC Motor Model}
 \input{secs/ESC_input.tex}
 \input{./secs/bldc_static.tex}
 \input{./secs/BLDC_model.tex}
 %===============================================================================
-\newpage
-
-
 \section{BLDC Motor with Propeller Model}
+\input{./secs/bldc_prop_model.tex}
 %===============================================================================
 \newpage
-
-
 \section{RPM sensing algorithm}
 \subsection{Algorithm}
 \subsection{Validation}
 %===============================================================================
-\newpage
-
-
 \section{Static Model Parameter Identification}
 \subsection{BLDC Motor}
 \subsection{Propeller Aerodynamics}
 %===============================================================================
-\newpage
-
-
 \section{Dynamic Model Parameter Identification}
 \subsection{BLDC Motor}
 \subsection{BLDC Motor and Propeller}
 %===============================================================================
-\newpage
-
-
 \section{Conclusion: Model and Model Parameters}
 \subsection{Parametric Form}
 %===============================================================================
-\newpage
-
-
 \section{Gyroscopic Effects of Propeller Inertia}
 %===============================================================================
-\newpage
-\newpage
 \bibliographystyle{unsrt}
 \bibliography{refs}
 
