--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -14,6 +14,9 @@
 \usepackage{pdfpages}
 \usepackage{multicol}
 \usepackage{leftindex}
+\usepackage{algorithm2e}
+\SetKwComment{Comment}{/* }{ */}
+%\RestyleAlgo{ruled}
 \usepackage{mathtools}
 \usepackage{hyperref}
 \hypersetup{
@@ -28,6 +31,7 @@
 % NewCommands
 \newcommand{\peq}{ \mathrel{+}= }
 \newcommand{\muleq}{ \mathrel{*}= }
+\newcommand{\sign}{ \text{sign}}
 \newcommand{\bm}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\lx}[2]{\leftindex #1 {#2}}
 \newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
@@ -46,33 +50,39 @@
 \tableofcontents
 
 \newpage
-\section{Aerodynamic Model}
-\input{secs/aero.tex}
 %===============================================================================
+\newpage
 \section{BLDC Motor Model}
 \input{secs/ESC_input.tex}
 \input{./secs/bldc_static.tex}
 \input{./secs/BLDC_model.tex}
 %===============================================================================
+\newpage
 \section{BLDC Motor with Propeller Model}
+\subsection{Aerodynamic Model}
+\input{secs/aero.tex}
 \input{./secs/bldc_prop_model.tex}
 %===============================================================================
 \newpage
-\section{RPM sensing algorithm}
-\subsection{Algorithm}
+\section{RPM Measurement}
+\input{secs/rpm_feedback.tex}
 \subsection{Validation}
 %===============================================================================
+\newpage
 \section{Static Model Parameter Identification}
 \subsection{BLDC Motor}
 \subsection{Propeller Aerodynamics}
 %===============================================================================
+\newpage
 \section{Dynamic Model Parameter Identification}
 \subsection{BLDC Motor}
 \subsection{BLDC Motor and Propeller}
 %===============================================================================
+\newpage
 \section{Conclusion: Model and Model Parameters}
 \subsection{Parametric Form}
 %===============================================================================
+\newpage
 \section{Gyroscopic Effects of Propeller Inertia}
 %===============================================================================
 \bibliographystyle{unsrt}
