Sent ot professor last wednesday.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -79,6 +79,7 @@
 %\newpage
 %\section{Gyroscopic Effects of Propeller Inertia}
 %===============================================================================
+\newpage
 \bibliographystyle{unsrt}
 \bibliography{refs}
 
