--- a/secs/NormOmega.tex
+++ b/secs/NormOmega.tex
@@ -58,5 +58,7 @@ The choice of bias as $1110$ was due to the fact that the maximum input that can
 \end{figure}
 Thus,
 \begin{align*}
-    \boxed{g_w(u_p) = 22 \ln(u_p - 1110)- 47.5 }
+    &\boxed{g_w(u_p) = 22 \ln(u_p - 1110)- 47.5 }\\
+    and, &\\
+    &\, g'_w(u_p) = \frac{22}{u_p - 1110}
 \end{align*}
