--- a/secs/bldc_prop_model.tex
+++ b/secs/bldc_prop_model.tex
@@ -3,8 +3,8 @@ Adding propeller moment of inertia and the moment due to propeller drag into the
 \begin{align*}
     (J_m + J_p) \dot \omega + (K_rK_v + b_f) \omega + M_f &= u K_r V_{in} - C_D \omega^2\\
     Let, \qquad J_m + J_p &= J\\
-    J\dot \omega + (K_rK_v + b_f) \omega + C_D \omega^2 + M_f &= u K_r V_{in}
-    \text{Substituting, } K_r u &= (K_r K_v  + b_f) u_\omega + \frac{M_f}{\hat V_{in}}\\
+    J\dot \omega + (K_rK_v + b_f) \omega + C_D \omega^2 + M_f &= u K_r V_{in}\\
+    \text{Substituting, } \quad K_r u &= (K_r K_v  + b_f) u_\omega + \frac{M_f}{\hat V_{in}}\\
     J\dot \omega + (K_rK_v + b_f) \omega + C_D \omega^2 + M_f &= V_{in} \left((K_r K_v  + b_f) u_\omega + \frac{M_f}{\hat V_{in}} \right)\\
 \end{align*}
 
@@ -16,31 +16,42 @@ We get the linearised model using small perturbtation:
 \end{align*}
 Thus we have the trannsfer function model:
 \begin{align*}
-    \frac{\delta \omega(s)}{\delta u_\omega (s)} &= \frac{(K_r K_v  + b_f)  V_{in}
-}{J s + (K_rK_v + b_f + 2 C_D \omega_0)} = \frac{\frac{K_v}{(K_rK_v + b_f + 2 C_D \omega_0)} V_{in}}{\frac{J}{(K_r K_v + b_f + 2 C_D \omega_0)}s + 1} = \frac{K_p}{\tau_p s + 1}\\
+    \frac{\delta \omega(s)}{\delta u_\omega (s)} &=
+    \frac{(K_r K_v  + b_f)  V_{in}}{J s + (K_rK_v + b_f + 2 C_D \omega_0)} = \frac{\frac{V_{in}}{\left(1 + \frac{2 C_D}{K_r K_v + b_f} \omega_0 \right)}}{\frac{J}{(K_r K_v + b_f + 2 C_D \omega_0)}s + 1} = \frac{K_p}{\tau_p s + 1}\\
     \text{Where, }\qquad &\\
-    K_p &= \frac{K_r}{(K_rK_v + b_f + 2 C_D \omega_0)} V_{in}\\
+    K_p &= \frac{K_r K_v + b_f}{(K_rK_v + b_f + 2 C_D \omega_0)} V_{in}\\
     \tau_p &= \frac{J}{(K_rK_v + b_f + 2 C_D \omega_0)}
 \end{align*}
 
 Thus both gain and time-constant vary with the nominal rpm. Effectively, the cutoff frequency is the only parameter that varies with nominal rpm. When the above trannsfer function is written in the form:
 \begin{align*}
-    \frac{\delta \omega(s)}{\delta u(s)} &= \frac{k_p}{s + \omega_p} = \frac{\frac{K_r V_{in}}{J}}{s + \frac{(K_rK_v + b_f + 2 C_D \omega_0)}{J}}\\
+    \frac{\delta \omega(s)}{\delta u_w(s)} &= \frac{k_p}{s + \omega_p} = \frac{\frac{(K_rK_v + b_f) V_{in}}{J}}{s + \frac{(K_rK_v + b_f + 2 C_D \omega_0)}{J}}\\
     \text{Where, } \qquad &\\
-    k_p &= \frac{K_r V_{in}}{J} & (\text{Independent of } \omega_0)\\
+    k_p &= \frac{(K_rK_v + b_f) V_{in}}{J} & (\text{Independent of } \omega_0)\\
     \omega_p &= \frac{(K_rK_v + b_f + 2 C_D \omega_0)}{J}
 \end{align*}
 
-This information will be used for establishing the validity of identified models.
+This information will be used for establishing the validity of identified model.
+
+In case of using $u_p$ as input:
+\begin{align*}
+    \frac{\delta \omega(s)}{\delta u_p(s)} &= \frac{g'_w (u_p) k_p}{s + \omega_p} = \frac{\left(\frac{22 k_p}{u_p - 1110}\right)}{s + \omega_p}
+\end{align*}
+
+Thus in this case the numerator gain varies inversely with $u_{p_{nom}}$ and $\omega_p$ varies with $\omega_0$.
 
 %===============================================================================
 \subsection{Parametric Identification model for BLDC motor - propeller dyanmcis}
 \subsubsection{Continuous Parametric Model}
-Let, $J$ be the propeller moment on inertia along the normal axis. Then,
+Let, $J$ be the total moment on inertia along the normal axis. Then,
 \begin{align*}
-    J \dot \omega &= -(K_rK_v + b_f) \omega_m - M_f - C_D \omega_m^2 + u_{in} K_r V_{in}\\
+    J \dot \omega &= -(K_rK_v + b_f) \omega_m - M_f - C_D \omega_m^2 + u K_r V_{in}\\
    %===
-    \implies \dot \omega &= -\frac{(K_rK_v + b_f)}{J} \omega_m - \frac{M_f}{J} - \frac{C_D}{J} \omega_m^2 + u \frac{K_r V_{in}}{J}
+    \implies J\dot \omega &= -(K_rK_v + b_f) \omega - C_D \omega^2 - M_f + V_{in} \left((K_r K_v  + b_f) u_\omega + \frac{M_f}{\hat V_{in}} \right)\\
+   %===
+        &= -(K_rK_v + b_f) \omega - C_D \omega^2 - M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) + V_{in} \left((K_r K_v  + b_f) u_\omega  \right)\\
+    %==
+    \implies \dot \omega &= -\frac{(K_rK_v + b_f)}{J} \omega_m - \frac{C_D}{J} \omega_m^2 - M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) + u_\omega \frac{(K_rK_v + b_f)}{J} V_{in}
 \end{align*}
 
 Hence, we have the continuous parametric model:
@@ -51,18 +62,19 @@ $$ \dot \omega =
 \underbrace{\begin{bmatrix}
     \frac{C_{D}}{J} \\
     \frac{(K_rK_v + b_f)}{J}  \\
-    \frac{M_f}{J}
+    M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)
 \end{bmatrix} }_{\pmb \theta}
-    +\frac{K_r V_{in}}{J}u $$
+    +\left(\frac{(K_rK_v + b_f)}{J} V_{in}\right) u_{\omega}
+ $$
 
 Let,
 \begin{align*}
     a_1 = \frac{C_{D}}{J}  \qquad
     a_2 &= \frac{(K_rK_v + b_f)}{J} \qquad
-    a_3 =   \frac{M_f}{J}\\
+    a_3 =   M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)\\
     \\
     \pmb \theta = \begin{bmatrix}a_1 & a_2 & a_3 \end{bmatrix}^T &\qquad
-    b =  \frac{K_r V_{in}}{J}
+    b = \frac{(K_rK_v + b_f)}{J} V_{in} = a_2 V_{in}
 \end{align*}
 
 $$\therefore \dot \omega = \Phi^T(\omega) \pmb \theta + b u$$
@@ -108,8 +120,8 @@ Let,
     \begin{bmatrix}
         \frac{C_{D}}{J} \\
         \frac{(K_rK_v + b_f)}{J} - \frac{1}{h}  \\
-        \frac{M_f}{J}\\
-        \frac{K_r V_{in}}{J}
+        M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)\\
+        \frac{(K_rK_v + b_f)}{J} V_{in}
     \end{bmatrix}
     \qquad \text{and} \qquad
     \Phi(\omega[k-1], u[k])^T &=  \begin{bmatrix} - \omega^2[k-1] & -\omega[k-1] & -1 & u[k-1] \end{bmatrix}
@@ -120,10 +132,11 @@ hence, we have the parametric model in least-squares form:
     \omega[k] &= \Phi(\omega[k-1], u[k-1])^T \pmb \theta_h
 \end{align*}
 
-\subsubsection{Input singal (persistance of exitation and frequency limitation)}
-\textbf{Note:}
-\begin{enumerate}
-    \item PE order of a square wave of half-period m is m+1.
-    \item PE order of a single sine wave is 2.
-\end{enumerate}
-Hence, a sum of sinusoids wave with atleast 3 waves within the frequency of 45 Hz (the limitation is due to the structure) can be used to estimate the parameters and the coefficients of force and torque generated.
+%\subsubsection{Input singal (persistance of exitation and frequency limitation)}
+%\textbf{Note:}
+%\begin{enumerate}
+%    \item PE order of a square wave of half-period m is m+1.
+%    \item PE order of a single sine wave is 2.
+%\end{enumerate}
+%Hence, a sum of sinusoids wave with atleast 3 waves within the frequency of 45 Hz (the limitation is due to the structure) can be used to estimate the parameters and the coefficients of force and torque generated.
+%
