--- a/secs/aero.tex
+++ b/secs/aero.tex
@@ -1,3 +1,4 @@
+\subsection{Propeller Aerodynamics}
 Aerodynamics are assumed to be faster than mechanical dynamics of the actuator.
 The thrust generation process due to the propagation of pressure wave is assumed to be instantaneous. This assumption is inherent to the standard models that use potential flow theory (lifting-line, blade-element and momentum-disk theories), as they assume incompressible flow.\\
 
