--- a/secs/bldc_prop_model.tex
+++ b/secs/bldc_prop_model.tex
@@ -1,13 +1,3 @@
-\subsection{BLDC Motor with Propeller}
-Adding propeller moment of inertia and the moment due to propeller drag into the BLDC motor model.
-\begin{align*}
-    (J_m + J_p) \dot \omega + (K_rK_v + b_f) \omega + M_f &= u K_r V_{in} - C_D \omega^2\\
-    Let, \qquad J_m + J_p &= J\\
-    J\dot \omega + (K_rK_v + b_f) \omega + C_D \omega^2 + M_f &= u K_r V_{in}\\
-    \text{Substituting, } \quad K_r u &= (K_r K_v  + b_f) u_\omega + \frac{M_f}{\hat V_{in}}\\
-    J\dot \omega + (K_rK_v + b_f) \omega + C_D \omega^2 + M_f &= V_{in} \left((K_r K_v  + b_f) u_\omega + \frac{M_f}{\hat V_{in}} \right)\\
-\end{align*}
-
 
 We get the linearised model using small perturbtation:
 \begin{align*}
@@ -42,7 +32,6 @@ Thus in this case the numerator gain varies inversely with $u_{p_{nom}}$ and $\o
 
 %===============================================================================
 \subsection{Parametric Identification model for BLDC motor - propeller dyanmcis}
-\subsubsection{Continuous Parametric Model}
 Let, $J$ be the total moment on inertia along the normal axis. Then,
 \begin{align*}
     J \dot \omega &= -(K_rK_v + b_f) \omega_m - M_f - C_D \omega_m^2 + u K_r V_{in}\\
@@ -51,86 +40,101 @@ Let, $J$ be the total moment on inertia along the normal axis. Then,
    %===
         &= -(K_rK_v + b_f) \omega - C_D \omega^2 - M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) + V_{in} \left((K_r K_v  + b_f) u_\omega  \right)\\
     %==
-    \implies \dot \omega &= -\frac{(K_rK_v + b_f)}{J} \omega_m - \frac{C_D}{J} \omega_m^2 - M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) + u_\omega \frac{(K_rK_v + b_f)}{J} V_{in}
-\end{align*}
-
-Hence, we have the continuous parametric model:
-$$ \dot \omega =
-    \underbrace{\begin{bmatrix}
-    - \omega^2 & - \omega  & -1
-\end{bmatrix}}_{\Phi^T(\omega)}
-\underbrace{\begin{bmatrix}
-    \frac{C_{D}}{J} \\
-    \frac{(K_rK_v + b_f)}{J}  \\
-    M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)
-\end{bmatrix} }_{\pmb \theta}
-    +\left(\frac{(K_rK_v + b_f)}{J} V_{in}\right) u_{\omega}
- $$
-
-Let,
-\begin{align*}
-    a_1 = \frac{C_{D}}{J}  \qquad
-    a_2 &= \frac{(K_rK_v + b_f)}{J} \qquad
-    a_3 =   M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)\\
-    \\
-    \pmb \theta = \begin{bmatrix}a_1 & a_2 & a_3 \end{bmatrix}^T &\qquad
-    b = \frac{(K_rK_v + b_f)}{J} V_{in} = a_2 V_{in}
-\end{align*}
-
-$$\therefore \dot \omega = \Phi^T(\omega) \pmb \theta + b u$$
-
-\subsubsection{Descritezed Parametric Model}
-Descritizing the above model using euler-method $\left(\dot \omega = \frac{\omega[k] - \omega[k-1]}{h}\right)$, with $h$ as the sampling interval:
-
-\begin{align*}
-    \frac{\omega[k] - \omega[k-1]}{h} &=
-    \begin{bmatrix} - \omega^2[k-1] & - \omega[k-1]  &  -1 \end{bmatrix}
-    \begin{bmatrix}
-        a_1 \\ a_2 \\ a_3
-    \end{bmatrix}
-    + bu[k-1]\\
+    \implies J \dot \omega &= -(K_rK_v + b_f)\omega_m - C_D \omega_m^2 - M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) + u_\omega (K_rK_v + b_f) V_{in}
     %===
-    \omega[k] &= h \begin{bmatrix} - \omega^2[k-1] & - \omega[k-1]  & -1 \end{bmatrix}
-    \begin{bmatrix}
-        a_1 \\
-        a_2 - \frac{1}{h} \\
-        a_3 \\
-    \end{bmatrix}
-    + b  h u[k-1]\\
+\end{align*}
+$$\boxed{J \dot \omega + (K_rK_v + b_f)\omega + C_D \omega_m^2 + M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) =  u_\omega (K_rK_v + b_f) V_{in}}$$
+
+As $M_m = (K_rK_v + b_f) \omega + C_D \omega^2 + M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right) $ is measured, we use it in the right-hand side of parameter esitmation to reduce the number of parameters.
+
+Descritizing the above equation:
+\begin{align*}
+    \frac{J}{h} (\omega[k+1] - \omega[k]) - u_\omega[k] (K_rK_v + b_f) V_{in} &= - M_m \\
     %===
-    &= h \begin{bmatrix} - \omega^2[k-1] & -\omega[k-1] & -1 & u[k] \end{bmatrix}
-    \begin{bmatrix}
-        a_1 \\
-        a_2 - \frac{1}{h} \\
-        a_3 \\
-        b
-    \end{bmatrix}
+    J(\omega[k+1] - \omega[k]) - u_\omega[k] h(K_rK_v + b_f) V_{in} &= - M_m h \\
+    %===
+    \underbrace{\bm{(\omega[k+1] - \omega[k]) & -h u_\omega[k]} }_{\phi(\omega[k+1], \omega[k], u[k])} \underbrace{\bm{J \\ (K_rK_v + b_f) V_{in} }}_{\pmb \theta} &= - M_m h
 \end{align*}
 
-Let,
-\begin{align*}
-    \pmb \theta_h = h
-    \begin{bmatrix}
-        a_1 \\
-        a_2 - \frac{1}{h} \\
-        a_3 \\
-        b
-    \end{bmatrix} =
-    h
-    \begin{bmatrix}
-        \frac{C_{D}}{J} \\
-        \frac{(K_rK_v + b_f)}{J} - \frac{1}{h}  \\
-        M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)\\
-        \frac{(K_rK_v + b_f)}{J} V_{in}
-    \end{bmatrix}
-    \qquad \text{and} \qquad
-    \Phi(\omega[k-1], u[k])^T &=  \begin{bmatrix} - \omega^2[k-1] & -\omega[k-1] & -1 & u[k-1] \end{bmatrix}
-\end{align*}
 
-hence, we have the parametric model in least-squares form:
-\begin{align*}
-    \omega[k] &= \Phi(\omega[k-1], u[k-1])^T \pmb \theta_h
-\end{align*}
+
+% Hence, we have the continuous parametric model:
+% $$ \dot \omega =
+%     \underbrace{\begin{bmatrix}
+%     - \omega^2 & - \omega  & -1
+% \end{bmatrix}}_{\Phi^T(\omega)}
+% \underbrace{\begin{bmatrix}
+%     \frac{C_{D}}{J} \\
+%     \frac{(K_rK_v + b_f)}{J}  \\
+%     M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)
+% \end{bmatrix} }_{\pmb \theta}
+%     +\left(\frac{(K_rK_v + b_f)}{J} V_{in}\right) u_{\omega}
+%  $$
+
+% Let,
+% \begin{align*}
+%     a_1 = \frac{C_{D}}{J}  \qquad
+%     a_2 &= \frac{(K_rK_v + b_f)}{J} \qquad
+%     a_3 =   M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)\\
+%     \\
+%     \pmb \theta = \begin{bmatrix}a_1 & a_2 & a_3 \end{bmatrix}^T &\qquad
+%     b = \frac{(K_rK_v + b_f)}{J} V_{in} = a_2 V_{in}
+% \end{align*}
+
+% $$\therefore \dot \omega = \Phi^T(\omega) \pmb \theta + b u$$
+
+% \subsubsection{Descritezed Parametric Model}
+% Descritizing the above model using euler-method $\left(\dot \omega = \frac{\omega[k] - \omega[k-1]}{h}\right)$, with $h$ as the sampling interval:
+
+% \begin{align*}
+%     \frac{\omega[k] - \omega[k-1]}{h} &=
+%     \begin{bmatrix} - \omega^2[k-1] & - \omega[k-1]  &  -1 \end{bmatrix}
+%     \begin{bmatrix}
+%         a_1 \\ a_2 \\ a_3
+%     \end{bmatrix}
+%     + bu[k-1]\\
+%     %===
+%     \omega[k] &= h \begin{bmatrix} - \omega^2[k-1] & - \omega[k-1]  & -1 \end{bmatrix}
+%     \begin{bmatrix}
+%         a_1 \\
+%         a_2 - \frac{1}{h} \\
+%         a_3 \\
+%     \end{bmatrix}
+%     + b  h u[k-1]\\
+%     %===
+%     &= h \begin{bmatrix} - \omega^2[k-1] & -\omega[k-1] & -1 & u[k] \end{bmatrix}
+%     \begin{bmatrix}
+%         a_1 \\
+%         a_2 - \frac{1}{h} \\
+%         a_3 \\
+%         b
+%     \end{bmatrix}
+% \end{align*}
+
+% Let,
+% \begin{align*}
+%     \pmb \theta_h = h
+%     \begin{bmatrix}
+%         a_1 \\
+%         a_2 - \frac{1}{h} \\
+%         a_3 \\
+%         b
+%     \end{bmatrix} =
+%     h
+%     \begin{bmatrix}
+%         \frac{C_{D}}{J} \\
+%         \frac{(K_rK_v + b_f)}{J} - \frac{1}{h}  \\
+%         M_f \left( 1 - \frac{V_{in}}{\hat V_{in}}\right)\\
+%         \frac{(K_rK_v + b_f)}{J} V_{in}
+%     \end{bmatrix}
+%     \qquad \text{and} \qquad
+%     \Phi(\omega[k-1], u[k])^T &=  \begin{bmatrix} - \omega^2[k-1] & -\omega[k-1] & -1 & u[k-1] \end{bmatrix}
+% \end{align*}
+
+% hence, we have the parametric model in least-squares form:
+% \begin{align*}
+%     \omega[k] &= \Phi(\omega[k-1], u[k-1])^T \pmb \theta_h
+% \end{align*}
 
 %\subsubsection{Input singal (persistance of exitation and frequency limitation)}
 %\textbf{Note:}
