Need to correct somethings 1. Add the the static mapping with propeller stuff.

--- a/secs/BLDC_model.tex
+++ b/secs/BLDC_model.tex
@@ -35,6 +35,7 @@ Substituting:
     \boxed{
     J_m \dot \omega_m + (K_r K_v  + b_f) \omega_m + M_f = u K_r V_{in}
     }
+    \label{eqn:no_prop}
 \end{equation}
 
 \subsection{BLDC Motor with Propeller}
@@ -47,6 +48,7 @@ Where, $C_D$ is the aerodynamic drag. Let, $J_m + J_p = J$
     \boxed{
     J\dot \omega + (K_rK_v + b_f) \omega + C_D \omega^2 + M_f = u K_r V_{in}
     }
+    \label{eqn:prop}
 \end{equation}
 
 
