commint to push to remote

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -41,7 +41,7 @@
 
 
 \title{Parametric Model Identification for Motor-Propeller Actuator Dynamics}
-\author{Sesha N. Charla}
+\author{Sesha Charla}
 \date{\today}
 
 
