Renamed the files to show section stuff.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -53,10 +53,9 @@
 %===============================================================================
 \newpage
 \section{Brushless DC motor model}
-\subsection{Brushless DC motor speed-troque characteristics \cite{crowder2019electric}}
-\input{./secs/bldc_static.tex}
-\input{./secs/BLDC_model.tex}
-\input{./secs/aero.tex}
+\input{./secs/1_1-bldc_static.tex}
+\input{./secs/1_2-bldc_dyn_noprop.tex}
+\input{./secs/1_4-aero_coeff.tex}
 %===============================================================================
 \newpage
 \section{RPM Measurement}
