--- a/secs/3_2-norm_omega.tex
+++ b/secs/3_2-norm_omega.tex
@@ -54,7 +54,7 @@ The choice of bias as $1110$ was due to the fact that the maximum input that can
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.7\textwidth]{./figs/norm_omega/g_w.eps}
+    \includegraphics[width = 0.7\textwidth]{./figs/norm_omega/no-load_rpm.eps}
     \caption{Logarithmic fit for $g_w()$}
 \end{figure}
 Thus,
