The noload rpm is not working, so will go for the normalized rpm idea.

--- a/act_dyn.tex
+++ b/act_dyn.tex
@@ -37,6 +37,7 @@
 \newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
 \newcommand{\itbf}[1]{\textit{\textbf{#1}}}
 \newcommand{\mdet}[1]{\norm{\begin{matrix} #1 \end{matrix}}}
+\newcommand{\lr}[1]{\left( #1 \right)}
 
 
 
