creating a no-load rpm branch

--- a/secs/3_1-ESC_input.tex
+++ b/secs/3_1-ESC_input.tex
@@ -22,4 +22,4 @@ The current ESC that has the rpm-feedback capabilites has an operating range bet
     \text{Maximum Operating Duty Cycle } &= \frac{1890}{2500} = 0.756\\
 \end{align*}
 
-$u$ can be considered to be the actual input to the system and system identification with the propeller. It turns out that the parameters of the above non-linear filter are not estimatable with the give information. To solve this problem, we chose normalized no-load angular velocity of the motor as the input instead.
+$u$ can be considered to be the actual input to the system and system identification with the propeller. It turns out that the parameters of the above non-linear filter are not estimatable with the give information. To solve this problem, we chose angular velocity of the motor with propeller normalized with voltage as the input instead.
